// Copied and adapted from plugin "Graph Database Support"
// by Neueda Technologies, Ltd.
// Modified by Alberto Venturini, 2022
plugins {
    id 'idea'

    // Java support
    id 'java'

    // Gradle IntelliJ Plugin
    id 'org.jetbrains.intellij' version "$versionGradleIntelliJ"

    // https://github.com/researchgate/gradle-release
    id 'net.researchgate.release' version '2.8.0'
}

apply plugin: 'idea'

def configDir = new File(buildscript.sourceFile.parentFile, 'config')
ext.checkstyleConfigDir = "$configDir/checkstyle"

allprojects {

    buildscript {
        repositories {
            mavenCentral()
            mavenLocal()
            jcenter()
        }
    }

    repositories {
        mavenCentral()
//        mavenLocal()
//        jcenter()
//        maven { url 'https://dl.bintray.com/jetbrains/intellij-plugin-service' }
    }

    apply plugin: 'java'
    apply plugin: 'checkstyle'

    sourceCompatibility = 17
    targetCompatibility = 17

    intellij {
        version = intellijSdkVersion
        //instrumentCode = true
        type = "IC"
        plugins = ['java']
    }

    checkstyle {
        toolVersion = "7.0"
        configFile = new File(checkstyleConfigDir, "checkstyle.xml")
        configProperties.checkstyleConfigDir = checkstyleConfigDir
    }
}

test {
    systemProperty 'graphDatabaseSupportDevelopment', 'true'
}

// See https://github.com/researchgate/gradle-release
release {
    failOnCommitNeeded = true
    failOnPublishNeeded = true
    failOnSnapshotDependencies = true
    failOnUnversionedFiles = true
    failOnUpdateNeeded = true
    revertOnFail = true

    buildTasks = ['build']

    tagTemplate = '${version}'
    preCommitText = '[release]'
    preTagCommitMessage = ' [skip ci] Pre tag commit: '
    tagCommitMessage = ' Creating tag: '
    newVersionCommitMessage = ' [skip ci] New version commit: '

    git {
        requireBranch = 'master'
    }
}

//afterReleaseBuild.dependsOn publishPlugin
